--- a/ConsoleApp1/App.config
+++ b/ConsoleApp1/App.config
@@ -1,6 +1,32 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
-    </startup>
+
+  <configSections>
+    <section name="akka" type="Akka.Configuration.Hocon.AkkaConfigurationSection, Akka" />
+  </configSections>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+  </startup>
+  <akka>
+    <hocon>
+      <![CDATA[
+					akka {     
+          actor {
+          	deployment {               
+              "/cliClient/calculationCoordinator/*/sumCalculation" {
+                router = round-robin-pool
+								nr-of-instances = 1
+                }              
+              
+							"/cliClient/calculationCoordinator" {
+                router = round-robin-pool
+								nr-of-instances = 5
+               }
+           }  
+          }
+          }
+          ]]>
+    </hocon>
+  </akka>
+  
 </configuration>
