--- a/ClientNode/packages.config
+++ b/ClientNode/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Akka" version="1.3.2" targetFramework="net452" />
   <package id="Akka.Cluster" version="1.3.2" targetFramework="net452" />
+  <package id="Akka.Cluster.Tools" version="1.3.2" targetFramework="net452" />
   <package id="Akka.Remote" version="1.3.2" targetFramework="net452" />
   <package id="DotNetty.Buffers" version="0.4.6" targetFramework="net452" />
   <package id="DotNetty.Codecs" version="0.4.6" targetFramework="net452" />
