--- a/WorkerNode/WorkerNode.csproj
+++ b/WorkerNode/WorkerNode.csproj
@@ -38,6 +38,9 @@
     <Reference Include="Akka.Cluster, Version=1.3.2.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Akka.Cluster.1.3.2\lib\net45\Akka.Cluster.dll</HintPath>
     </Reference>
+    <Reference Include="Akka.Cluster.Tools, Version=1.3.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Akka.Cluster.Tools.1.3.2\lib\net45\Akka.Cluster.Tools.dll</HintPath>
+    </Reference>
     <Reference Include="Akka.Remote, Version=1.3.2.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Akka.Remote.1.3.2\lib\net45\Akka.Remote.dll</HintPath>
     </Reference>
