--- a/ClientNode/App.config
+++ b/ClientNode/App.config
@@ -10,6 +10,7 @@
   <akka>
     <hocon>
       <![CDATA[
+      
 					akka {     
             actor.provider = cluster
             remote {
@@ -19,23 +20,37 @@
                 }
             }
             
-            cluster {
+          cluster {
              seed-nodes = ["akka.tcp://calculation@localhost:8081"] # address of seed node
              roles = ["client"] # roles this member is in
           }
-
-
     
           actor {
+             serializers {
+                akka-pubsub = "Akka.Cluster.Tools.PublishSubscribe.Serialization.DistributedPubSubMessageSerializer, Akka.Cluster.Tools"
+             }
+             serialization-bindings {
+                "Akka.Cluster.Tools.PublishSubscribe.IDistributedPubSubMessage, Akka.Cluster.Tools" = akka-pubsub
+                "Akka.Cluster.Tools.PublishSubscribe.Internal.SendToOneSubscriber, Akka.Cluster.Tools" = akka-pubsub
+             }
+             serialization-identifiers {
+                "Akka.Cluster.Tools.PublishSubscribe.Serialization.DistributedPubSubMessageSerializer, Akka.Cluster.Tools" = 9
+             }
+            
           	deployment {         
 							"/cliClient/calculationCoordinators" {
                 router = round-robin-pool
 								nr-of-instances = 5
-              
+                cluster { 
+                     enabled = on 
+                     allow-local-routees = off 
+                     use-role = calculation 
+                     max-nr-of-instances-per-node = 1 
+                  } 
                }
            }  
-          }
-          }
+         }
+      }
           ]]>
     </hocon>
   </akka>
