--- a/ClientNode/App.config
+++ b/ClientNode/App.config
@@ -39,7 +39,8 @@
             
           	deployment {         
 							"/cliClient/calculationCoordinators" {
-                router = round-robin-pool
+                router = round-robin-group
+                routees.paths = ["/user/calculationCoordinator"]
 								nr-of-instances = 5
                 cluster { 
                      enabled = on 
